facet-args/tests/snapshots/err__error_number_outside_range.snap
---
source: tests/err.rs
expression: "$crate :: common :: DiagnosticDisplayWrapper(& err).to_string()"
---
  × Could not parse CLI arguments
   ╭────
 1 │ --small 1000 
   ·         ──┬─
   ·           ╰── reflection error: Operation failed on shape u8: Failed to parse string value
   ╰────
